Signed-off-by: Dirceu Araújo Macêdo <dirceupwr@gmail.com>

--- a/exercicio_2/teste/src/main/resources/application.properties
+++ b/exercicio_2/teste/src/main/resources/application.properties
@@ -7,3 +7,4 @@ spring.jpa.show-sql=true
 spring.h2.console.enabled=true
 spring.security.user.name= user
 spring.security.user.password= user
+spring.mvc.pathmatch.matching-strategy=ant-path-matcher
