--- a/exercicio_2/teste/src/main/resources/application.properties
+++ b/exercicio_2/teste/src/main/resources/application.properties
@@ -8,3 +8,5 @@ spring.h2.console.enabled=true
 spring.security.user.name= user
 spring.security.user.password= user
 spring.mvc.pathmatch.matching-strategy=ant-path-matcher
+# disable api-docs
+springdoc.api-docs.enabled=false
