--- a/projeto/api/src/main/resources/application.properties
+++ b/projeto/api/src/main/resources/application.properties
@@ -5,3 +5,5 @@ spring.datasource.password=T@is.2020.
 
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
+
+server.error.include-stacktrace=never
