--- a/projeto/api/src/main/resources/application.properties
+++ b/projeto/api/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.datasource.url=jdbc:mysql://localhost/projeto_api
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.username=root
-spring.datasource.password=T@is.2020.
+spring.datasource.password=1432
 
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
